// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with a value 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-2 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-controlled-input"
>
  <input
    aria-label="ControlledInput"
    class="emotion-0"
    id="ControlledInput"
    type="checkbox"
    value="someValue"
  />
  <label
    class="emotion-2"
    data-test-id="cf-ui-form-label"
    for="ControlledInput"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with all required props 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-2 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="emotion-3"
  data-test-id="cf-ui-controlled-input"
>
  <input
    aria-label="ControlledInput"
    class="emotion-0"
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="emotion-2"
    data-test-id="cf-ui-form-label"
    for="ControlledInput"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-2 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-controlled-input"
>
  <input
    aria-label="ControlledInput"
    class="emotion-0"
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="emotion-2"
    data-test-id="cf-ui-form-label"
    for="ControlledInput"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with as checked 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-2 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-controlled-input"
>
  <input
    aria-label="ControlledInput"
    checked=""
    class="emotion-0"
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="emotion-2"
    data-test-id="cf-ui-form-label"
    for="ControlledInput"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with disabled prop 1`] = `
.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-2 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
  cursor: not-allowed;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-1 {
  display: inline-block;
  fill: #192532;
  height: 24px;
  width: 24px;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-controlled-input"
>
  <input
    aria-label="ControlledInput"
    class="emotion-0"
    disabled=""
    id="ControlledInput"
    type="checkbox"
    value=""
  />
  <label
    class="emotion-2"
    data-test-id="cf-ui-form-label"
    for="ControlledInput"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
      />
    </svg>
  </label>
</div>
`;

exports[`renders the component with required prop 1`] = `
.emotion-0 {
  display: inline-block;
  font-size: 0.875rem;
  opacity: 0;
  position: absolute;
  margin: 0;
  width: 1rem;
  height: 1rem;
  z-index: 1;
  cursor: pointer;
}

.emotion-0:focus + label {
  outline: none;
  border: 2px solid #2E75D4;
  box-shadow: 0px 0px 0px 3px #84B9F5;
}

.emotion-0:checked + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:checked + label,
.emotion-0:indeterminate + label {
  border-color: #2E75D4;
  background: #2E75D4;
}

.emotion-0:checked:disabled + label svg,
.emotion-0:indeterminate:disabled + label svg {
  fill: #6B7888;
}

.emotion-0:disabled + label {
  border-color: #c3cfd5;
  background: #c3cfd5;
}

.emotion-0:disabled + label svg {
  fill: #c3cfd5;
}

.emotion-3 {
  display: inline-block;
  position: relative;
  text-overflow: ellipsis;
  line-height: 1.5rem;
  margin: 0;
  width: 1rem;
  height: 1rem;
  min-height: 1rem;
  overflow: visible;
}

.emotion-2 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
  background: #ffffff;
  width: 1rem;
  height: 1rem;
  border: 2px solid #c3cfd5;
  fill: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 20%;
}

.emotion-2 svg {
  width: 0.75rem;
  min-width: 0.75rem;
  min-height: 0.75rem;
  height: 0.75rem;
}

.emotion-1 {
  display: inline-block;
  fill: #ffffff;
  height: 24px;
  width: 24px;
}

<div
  class="my-extra-class emotion-3"
  data-test-id="cf-ui-controlled-input"
>
  <input
    aria-label="ControlledInput"
    class="emotion-0"
    id="ControlledInput"
    required=""
    type="checkbox"
    value=""
  />
  <label
    class="emotion-2"
    data-test-id="cf-ui-form-label"
    for="ControlledInput"
  >
    <svg
      class="emotion-1"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
      />
    </svg>
  </label>
</div>
`;
